log
/home/disnocen/pr/automate-js/start.js:13
await page.evaluate(() => console.log(`data is: ${document.querySelector("#searchblock310_ebookmlol > div > div > div > div > div.product-desc.container.bottom-buffer-10 > p.product-title.text-center > a")}`);
                                                                                                                                                                                                               ^

SyntaxError: missing ) after argument list
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1026:15)
    at Module._compile (node:internal/modules/cjs/loader:1061:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1149:10)
    at Module.load (node:internal/modules/cjs/loader:975:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:81:12)
    at node:internal/main/run_main_module:17:47

Node.js v17.3.0
